--- a/tasks/app.json
+++ b/tasks/app.json
@@ -1,4 +1,23 @@
 {
-  "name": "tasks",
-  "displayName": "tasks"
+  "expo": {
+    "name": "tasks",
+    "slug": "tasks",
+    "privacy": "public",
+    "sdkVersion": "36.0.0",
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
+    "version": "1.0.0",
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    }
+  }
 }
