--- a/mines/package.json
+++ b/mines/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "expo start --ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "expo": "^36.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5"
   },
