--- a/tasks-backend/package.json
+++ b/tasks-backend/package.json
@@ -15,7 +15,7 @@
     "consign": "0.1.6",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "jwt-simple": "0.5.6",
+    "jwt-simple": "^0.5.6",
     "knex": "0.20.9",
     "moment": "2.24.0",
     "nodemon": "2.0.2",
